--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^2",
     "prettier-plugin-packagejson": "^2",
+    "sass-resources-loader": "^2.2.5",
     "typescript": "^4.1.2"
   }
 }
